# tatc-mcp

./: .gitignore  README.md  SCHEMA.txt  celestrak_client.py  gemini.py  pyproject.toml  requirements.txt  schema_formatter.py  server.py  tatc_integration.py  validation.py
tatc_mcp/: __init__.py  celestrak_client.py  schema_formatter.py  server.py  tatc_integration.py  validation.py
